// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v(primitive) v("0") 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v("0") 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v("0") 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v("0") 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v("0") 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v("0") 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v("0") 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v("0") 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v("0") 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v("0") 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "0",
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(0) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(0) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(0) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(0) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(0) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(0) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(0) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(0) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(0) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(0) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 0,
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(1) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(1) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(1) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(1) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(1) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(1) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(1) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(1) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(1) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(1) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(1) 11`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(NaN) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(NaN) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(NaN) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(NaN) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(NaN) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(NaN) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(NaN) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(NaN) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(NaN) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(NaN) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "NotANumber",
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(Symbol.for("quartet")) 11`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": Symbol(quartet),
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(false) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(false) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(false) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(false) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(false) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(false) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(false) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(false) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(false) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(false) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": false,
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(null) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(null) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(null) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(null) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(null) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(null) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(null) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(null) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(null) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(null) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": null,
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(true) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(true) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": undefined,
  },
]
`;

exports[`v(primitive) v(true) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(true) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(true) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(true) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(true) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(true) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(true) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(true) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": true,
    },
    "value": Array [],
  },
]
`;

exports[`v(primitive) v(undefined) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": null,
  },
]
`;

exports[`v(primitive) v(undefined) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": true,
  },
]
`;

exports[`v(primitive) v(undefined) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": false,
  },
]
`;

exports[`v(primitive) v(undefined) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": 0,
  },
]
`;

exports[`v(primitive) v(undefined) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": "0",
  },
]
`;

exports[`v(primitive) v(undefined) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": Infinity,
  },
]
`;

exports[`v(primitive) v(undefined) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": -Infinity,
  },
]
`;

exports[`v(primitive) v(undefined) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": NaN,
  },
]
`;

exports[`v(primitive) v(undefined) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": Object {},
  },
]
`;

exports[`v(primitive) v(undefined) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": undefined,
    },
    "value": Array [],
  },
]
`;
